--- a/FigurineCuisine/FigurineCuisine.csproj
+++ b/FigurineCuisine/FigurineCuisine.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="AntiXSS" Version="4.3.0" />
     <PackageReference Include="AuthorizeNet" Version="2.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.27" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.27" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.25" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.25" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.25" />
@@ -15,6 +17,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="System.Diagnostics.Debug" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
