--- a/FigurineCuisine/FigurineCuisine.csproj
+++ b/FigurineCuisine/FigurineCuisine.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="System.Diagnostics.Debug" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
